--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 body{
+    background-image: url("8c43645fe8d0ac164a6925448be32858.jpg");
     margin:12rem 30rem;
     font-family: Arial, sans-serif;
     justify-content: center;
@@ -14,7 +15,7 @@ body{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
     gap: 10px;  
-    background-color: #010101e0;    
+    background-color: #000000e0;    
     height: 400px;
     width: 600px;
     border-radius: 10px;
@@ -33,7 +34,8 @@ body{
 #display{
     grid-column: span 4;
     grid-row: 1/2;
-    background-color: #ffffff;
+    background-color: whitesmoke;
+    backdrop-filter: blur(30px);
     color: rgb(0, 0, 0);
     font-size: 36px;
     padding: 20px;
@@ -46,8 +48,8 @@ body{
 .showp{
     font-size: 16px;
     color: rgb(0, 0, 0);
-    grid-column: span 2;
-    grid-row: 2/3;
+    /* grid-column: span 2;
+    grid-row: 2/3; */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     border: none;
     outline: none;
@@ -74,10 +76,18 @@ button{
     transition: background-color 0.3s ease;
     border-radius: 10px;
 }
+.c{
+    background-color: rgba(255, 0, 0, 0.359);
+    color: whitesmoke;
+}
 .c:hover{
     background-color: rgb(255, 0, 0);
     color: white;
 }
-/* .op{
-
-} */
+.op{
+background-color: rgb(157, 136, 60);
+}
+.ee {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
